[ GSM is Greg Sabino Mullane <greg@endpoint.com> <greg@turnstep.com> ]


Bucardo version 5.3.0

  - Fix bug when makedelta used on tables with binary primary key columns
    [Greg Sabino Mullane]

  - Add 'makedelta' parameter to databases
    [Greg Sabino Mullane]

  - Better support for continuing once a database has crashed
    [Greg Sabino Mullane]


Bucardo version 5.2.0, released November 5, 2014 (git commit 003b827a73a6e2e51cc5e833a5b4bc21631bd216)

  - quickstart: new parameter to give on startup (e.g. "bucardo start --quickstart"). 
    When set, skips checking the tables and columns on remote databases.
    [Greg Sabino Mullane]

  - Fix problem of not clearing out stagetable before using it. There was a 
    chance that a previous KID left some rows in there, in which case duplicate 
    entries will appear in bucardo_track.
    [Greg Sabino Mullane]

  - Make sure makedelta only adds matching track table rows if the current database is 
    a source, not a target, for the current sync.
    [Greg Sabino Mullane]

  - Fix some errant global variables which were causing subtle bugs in the makedelta 
    system.
    [Greg Sabino Mullane]



Bucardo version 5.1.2, released October 15, 2014 (git commit 6b8f02feaef5b116dfba9b57f6a0617d73ba3657)

  - Fix problem with async failures
    [Greg Sabino Mullane]

  - Fix add_customcols params parsing
    [David Christensen]

  - Improve MCP loop handling on errors
    [Greg Sabino Mullane]

  - Make sure makedelta can be set for all databases, not just source ones
    [Greg Sabino Mullane]

  - Fix minor bug in send_mail subroutine
    [Greg Sabino Mullane]

  - Remove Encode::Locale dependency
    [Joshua Tolley]

  - Allow 'git list config*' to work as an alias for git config.
    Make plain 'git config' act as 'git show all'
    [Greg Sabino Mullane]


Bucardo version 5.1.1, released July 23, 2014 (git commit c91753ef834cdcac311d66851947d1e4cb8acc7c)

  - Minor fixes to conflict handling. [GSM]
