@@ -49,6 +49,7 @@ t/30-delta.t
 t/40-conflict.t
 t/40-customcode-exception.t
 t/40-serializable.t
+t/50-star.t
 t/98-cleanup.t
 t/99-signature.t
 t/BucardoTesting.pm
