@@ -12,6 +12,9 @@ Bucardo version 5.3.0
   - Better support for continuing once a database has crashed
     [Greg Sabino Mullane]
 
+  - New test file t/50-star.t and much improvement to testing framework
+    [Greg Sabino Mullane]
+
 
 Bucardo version 5.2.0, released November 5, 2014 (git commit 003b827a73a6e2e51cc5e833a5b4bc21631bd216)
 
